[gd_scene load_steps=17 format=2]

[ext_resource path="res://Graphics/icon.png" type="Texture" id=1]
[ext_resource path="res://Scenes/AI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Ball.gd" type="Script" id=4]
[ext_resource path="res://fonts/connection_ii/ConnectionII.tres" type="DynamicFont" id=5]
[ext_resource path="res://Scripts/ScoreText.gd" type="Script" id=6]
[ext_resource path="res://fonts/connection_ii/ConnectionII.otf" type="DynamicFontData" id=7]
[ext_resource path="res://Scripts/EndLabel.gd" type="Script" id=8]
[ext_resource path="res://Scripts/Field.gd" type="Script" id=9]

[sub_resource type="PhysicsMaterial" id=4]
friction = 100.0
rough = true
bounce = 0.5

[sub_resource type="CircleShape2D" id=5]
radius = 32.0

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 16, 76.1802 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 16, 112 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 512, 16 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.203922, 0.211765, 0.215686, 0.901961 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=11]
size = 100
font_data = ExtResource( 7 )

[node name="Field" type="Node2D"]
script = ExtResource( 9 )

[node name="Ball" type="RigidBody2D" parent="."]
position = Vector2( 512, 288 )
collision_layer = 8
collision_mask = 5
physics_material_override = SubResource( 4 )
gravity_scale = 0.0
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Ball"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource( 5 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Ball"]
position = Vector2( 3.33786e-06, -2.86102e-06 )
scale = Vector2( 2.4, 2.4 )

[node name="AI" parent="." instance=ExtResource( 2 )]
position = Vector2( 832, 288 )
margin = 50

[node name="RedGoal" type="Area2D" parent="."]
position = Vector2( 8, 304 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RedGoal"]
position = Vector2( -16, 0 )
shape = SubResource( 6 )

[node name="GoalArea" type="StaticBody2D" parent="RedGoal"]
position = Vector2( 8, -4 )
scale = Vector2( 0.5, 2.375 )
collision_layer = 0
collision_mask = 2

[node name="Sprite" type="Sprite" parent="RedGoal/GoalArea"]
modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RedGoal/GoalArea"]
shape = SubResource( 7 )

[node name="BlueGoal" type="Area2D" parent="."]
position = Vector2( 1016, 304 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlueGoal"]
position = Vector2( 16, 0 )
shape = SubResource( 6 )

[node name="GoalArea" type="StaticBody2D" parent="BlueGoal"]
position = Vector2( -8, -3.96851 )
scale = Vector2( 0.5, 2.375 )
collision_layer = 0
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="BlueGoal/GoalArea"]
modulate = Color( 0, 0.180392, 1, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlueGoal/GoalArea"]
shape = SubResource( 7 )

[node name="BallSpawn" type="Position2D" parent="."]
position = Vector2( 512, 288 )

[node name="Player1Pos" type="Position2D" parent="."]
position = Vector2( 192, 288 )

[node name="Player2Pos" type="Position2D" parent="."]
position = Vector2( 832, 288 )

[node name="Walls" type="Node" parent="."]

[node name="LeftWall" type="StaticBody2D" parent="Walls" groups=[
"Walls",
]]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/LeftWall"]
position = Vector2( 16, 112 )
scale = Vector2( 0.5, 3.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/LeftWall"]
position = Vector2( 16, 112 )
shape = SubResource( 8 )

[node name="LeftWall2" type="StaticBody2D" parent="Walls" groups=[
"Walls",
]]
position = Vector2( 0, 344 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/LeftWall2"]
position = Vector2( 16, 144 )
scale = Vector2( 0.5, 3.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/LeftWall2"]
position = Vector2( 16, 144 )
shape = SubResource( 8 )

[node name="RightWall" type="StaticBody2D" parent="Walls" groups=[
"Walls",
]]
position = Vector2( 992, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/RightWall"]
position = Vector2( 16, 112 )
scale = Vector2( 0.5, 3.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/RightWall"]
position = Vector2( 16, 112 )
shape = SubResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="RightWall2" type="StaticBody2D" parent="Walls" groups=[
"Walls",
]]
position = Vector2( 992, 344 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/RightWall2"]
position = Vector2( 16, 144 )
scale = Vector2( 0.5, 3.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/RightWall2"]
position = Vector2( 16, 144 )
shape = SubResource( 8 )

[node name="TopWall" type="StaticBody2D" parent="Walls" groups=[
"Walls",
]]
position = Vector2( 40, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/TopWall"]
position = Vector2( 472, 8 )
scale = Vector2( 16, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/TopWall"]
position = Vector2( 472, 8 )
shape = SubResource( 9 )

[node name="BottomWall" type="StaticBody2D" parent="Walls" groups=[
"Walls",
]]
position = Vector2( 40, 576 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/BottomWall"]
position = Vector2( 472, 8 )
scale = Vector2( 16, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/BottomWall"]
position = Vector2( 472, 8 )
shape = SubResource( 9 )

[node name="UI" type="Node" parent="."]

[node name="Panel" type="Panel" parent="UI"]
margin_left = 416.0
margin_right = 470.0
margin_bottom = 41.0
rect_scale = Vector2( 3.54819, 1.57523 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/Panel"]
visible = false
margin_right = 541.0
margin_bottom = 203.0
rect_scale = Vector2( 0.1, 0.2 )
custom_fonts/font = ExtResource( 5 )
text = "score"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreText" type="RichTextLabel" parent="UI/Panel"]
margin_top = 10.0
margin_right = 541.0
margin_bottom = 111.0
rect_scale = Vector2( 0.1, 0.2 )
size_flags_vertical = 0
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "[center]Score[/center]"
text = "Score"
fit_content_height = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameEndPanel" type="Control" parent="."]
pause_mode = 2
visible = false
margin_left = 384.0
margin_top = 192.0
margin_right = 640.0
margin_bottom = 384.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="GameEndPanel"]
anchor_left = -0.25
anchor_top = -0.333
anchor_right = -0.25
anchor_bottom = -0.333
margin_top = -0.0639992
margin_right = 384.0
margin_bottom = 319.936
custom_styles/panel = SubResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndLabel" type="RichTextLabel" parent="GameEndPanel/Panel"]
margin_left = 112.0
margin_top = 32.0
margin_right = 672.0
margin_bottom = 133.0
rect_scale = Vector2( 0.3, 0.3 )
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "[center][color=red]RED[/color] wins!"
text = "RED wins!"
fit_content_height = true
scroll_active = false
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreText" type="RichTextLabel" parent="GameEndPanel/Panel"]
margin_left = 8.0
margin_top = 112.0
margin_right = 499.0
margin_bottom = 213.0
rect_scale = Vector2( 0.75, 0.75 )
size_flags_vertical = 0
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "[center]Score[/center]"
text = "Score"
fit_content_height = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReplayBtn" type="Button" parent="GameEndPanel/Panel"]
margin_left = 8.0
margin_top = 245.0
margin_right = 688.0
margin_bottom = 445.0
rect_scale = Vector2( 0.2, 0.2 )
rect_pivot_offset = Vector2( 40, -16 )
custom_fonts/font = SubResource( 11 )
text = "Replay?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuBtn" type="Button" parent="GameEndPanel/Panel"]
margin_left = 176.0
margin_top = 245.0
margin_right = 856.0
margin_bottom = 444.0
rect_scale = Vector2( 0.2, 0.2 )
rect_pivot_offset = Vector2( 40, -16 )
custom_fonts/font = SubResource( 11 )
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="screen_exited" from="Ball/VisibilityNotifier2D" to="Ball" method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="body_entered" from="RedGoal" to="Ball" method="_on_RedGoal_body_entered"]
[connection signal="body_entered" from="RedGoal" to="UI/Panel/ScoreText" method="_on_RedGoal_body_entered"]
[connection signal="body_entered" from="RedGoal" to="GameEndPanel/Panel/ScoreText" method="_on_RedGoal_body_entered"]
[connection signal="body_entered" from="BlueGoal" to="Ball" method="_on_BlueGoal_body_entered"]
[connection signal="body_entered" from="BlueGoal" to="UI/Panel/ScoreText" method="_on_BlueGoal_body_entered"]
[connection signal="body_entered" from="BlueGoal" to="GameEndPanel/Panel/ScoreText" method="_on_BlueGoal_body_entered"]
[connection signal="visibility_changed" from="GameEndPanel/Panel/EndLabel" to="GameEndPanel/Panel/EndLabel" method="_on_EndLabel_visibility_changed"]
[connection signal="visibility_changed" from="GameEndPanel/Panel/ScoreText" to="GameEndPanel/Panel/ScoreText" method="_on_ScoreText_visibility_changed"]
[connection signal="pressed" from="GameEndPanel/Panel/ReplayBtn" to="." method="_on_ReplayBtn_pressed"]
